--- a/tasks/generate-index.yml
+++ b/tasks/generate-index.yml
@@ -10,12 +10,7 @@ spec:
     - name: output
   steps:
     - name: generate
-      image: quay.io/containers/podman:v3.1.2
-      securityContext:
-        privileged: true
-      volumeMounts:
-        - name: varlibcontainers
-          mountPath: /var/lib/containers
+      image: registry.access.redhat.com/ubi8-minimal
       workingDir: $(workspaces.output.path)
       script: |
         #! /usr/bin/env bash
@@ -28,13 +23,10 @@ spec:
         # this one replaces.
         opm index add \
           --bundles $(params.bundle_image) \
-          --container-tool podman \
+          --container-tool none \
           --out-dockerfile Dockerfile \
           --generate \
           --skip-tls \
           --permissive
 
-        ls -alh
-  volumes:
-    - name: varlibcontainers
-      emptyDir: {}
+        ls -alhR
