--- a/config/pipelines/operator-test-pipeline.yml
+++ b/config/pipelines/operator-test-pipeline.yml
@@ -97,13 +97,26 @@ spec:
         kind: ClusterTask
       params:
         - name: IMAGE
-          value: "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-5:$(tasks.validate.results.bundle_version)"
+          value: &indexImage45 "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-5:$(tasks.validate.results.bundle_version)"
         - name: CONTEXT
           value: "index-4.5"
         - <<: *buildahNoTlsVerify
       workspaces:
         - name: source
           workspace: pipeline
+
+    - name: test-4-5
+      taskRef:
+        name: operator-cert-test
+      runAfter:
+        - build-index-4-5
+      workspaces:
+        - name: results
+          workspace: pipeline
+          subPath: test-results-4.5
+      params:
+        - name: index_image
+          value: *indexImage45
 
     - <<: *generateIndex
       name: generate-index-4-6
@@ -122,10 +135,23 @@ spec:
         - generate-index-4-6
       params:
         - name: IMAGE
-          value: "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-6:$(tasks.validate.results.bundle_version)"
+          value: &indexImage46 "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-6:$(tasks.validate.results.bundle_version)"
         - name: CONTEXT
           value: "index-4.6"
         - <<: *buildahNoTlsVerify
+
+    - name: test-4-6
+      taskRef:
+        name: operator-cert-test
+      runAfter:
+        - build-index-4-6
+      workspaces:
+        - name: results
+          workspace: pipeline
+          subPath: test-results-4.6
+      params:
+        - name: index_image
+          value: *indexImage46
 
     - <<: *generateIndex
       name: generate-index-4-7
@@ -144,10 +170,23 @@ spec:
         - generate-index-4-7
       params:
         - name: IMAGE
-          value: "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-7:$(tasks.validate.results.bundle_version)"
+          value: &indexImage47 "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-7:$(tasks.validate.results.bundle_version)"
         - name: CONTEXT
           value: "index-4.7"
         - <<: *buildahNoTlsVerify
+
+    - name: test-4-7
+      taskRef:
+        name: operator-cert-test
+      runAfter:
+        - build-index-4-7
+      workspaces:
+        - name: results
+          workspace: pipeline
+          subPath: test-results-4.7
+      params:
+        - name: index_image
+          value: *indexImage47
 
     - <<: *generateIndex
       name: generate-index-4-8
@@ -166,7 +205,20 @@ spec:
         - generate-index-4-8
       params:
         - name: IMAGE
-          value: "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-8:$(tasks.validate.results.bundle_version)"
+          value: &indexImage48 "$(params.registry)/$(context.pipelineRun.namespace)/$(tasks.validate.results.package_name)-test-index-4-8:$(tasks.validate.results.bundle_version)"
         - name: CONTEXT
           value: "index-4.8"
         - <<: *buildahNoTlsVerify
+
+    - name: test-4-8
+      taskRef:
+        name: operator-cert-test
+      runAfter:
+        - build-index-4-8
+      workspaces:
+        - name: results
+          workspace: pipeline
+          subPath: test-results-4.8
+      params:
+        - name: index_image
+          value: *indexImage48
